RESOLVED FIXED103133
[EFL][WK2][AC] EwkViewImpl::transformToScreen() does not retrieve the Ecore_X_Window properly
https://bugs.webkit.org/show_bug.cgi?id=103133
Summary [EFL][WK2][AC] EwkViewImpl::transformToScreen() does not retrieve the Ecore_X...
Chris Dumez
Reported 2012-11-23 05:59:20 PST
If accelerated compositing is enabled EwkViewImpl::transformToScreen() should try to get the Ecore_X_Window using ecore_evas_gl_x11_window_get() first and only fallback to ecore_evas_software_x11_window_get(). Currently it calls ecore_evas_software_x11_window_get() no matter what, which will always return 0 if accelerated compositing is enabled.
Attachments
Patch (1.75 KB, patch)
2012-11-23 06:02 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2012-11-23 06:02:36 PST
WebKit Review Bot
Comment 2 2012-11-23 07:16:41 PST
Comment on attachment 175789 [details] Patch Clearing flags on attachment: 175789 Committed r135609: <http://trac.webkit.org/changeset/135609>
WebKit Review Bot
Comment 3 2012-11-23 07:16:45 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.