[EFL][WK2][AC] EwkViewImpl::transformToScreen() does not retrieve the Ecore_X_Window properly https://bugs.webkit.org/show_bug.cgi?id=103133

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-11-23
Reviewed by Kenneth Rohde Christiansen.

If accelerated compositing is enabled, EwkViewImpl::transformToScreen() should
attempt to retrieve the Ecore_X_Window using ecore_evas_gl_x11_window_get() first
and only fall back to ecore_evas_software_x11_window_get().

* UIProcess/API/efl/EwkViewImpl.cpp:
(EwkViewImpl::transformToScreen):

Canonical link: https://commits.webkit.org/121270@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135609 268f45cc-cd09-0410-ab3c-d52691b4dbfc